--- a/CatalogService/CatalogService/appsettings.json
+++ b/CatalogService/CatalogService/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "RabbitMq": {
+    "HostName": "localhost",
+    "Persistence": true,
+    "RoutingKey": "ItemUpdateQueue"
+  },
   "AllowedHosts": "*"
 }
