--- a/CatalogService/CatalogService.BLL/CatalogService.BLL.csproj
+++ b/CatalogService/CatalogService.BLL/CatalogService.BLL.csproj
@@ -11,8 +11,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CatalogSercice.Infrastructure\CatalogSercice.Infrastructure.csproj" />
+    <ProjectReference Include="..\CatalogService.Configuration\CatalogService.Configuration.csproj" />
     <ProjectReference Include="..\CatalogService.Domain\CatalogService.Domain.csproj" />
+    <ProjectReference Include="..\CatalogService.RabbitMq\CatalogService.RabbitMq.csproj" />
   </ItemGroup>
 
 </Project>
