--- a/CatalogService/CatalogService/CatalogService.csproj
+++ b/CatalogService/CatalogService/CatalogService.csproj
@@ -26,11 +26,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CatalogSercice.Infrastructure\CatalogSercice.Infrastructure.csproj" />
     <ProjectReference Include="..\CatalogService.API\CatalogService.API.csproj" />
     <ProjectReference Include="..\CatalogService.BLL\CatalogService.BLL.csproj" />
+    <ProjectReference Include="..\CatalogService.Configuration\CatalogService.Configuration.csproj" />
     <ProjectReference Include="..\CatalogService.DAL\CatalogService.DAL.csproj" />
     <ProjectReference Include="..\CatalogService.Domain\CatalogService.Domain.csproj" />
+    <ProjectReference Include="..\CatalogService.RabbitMq\CatalogService.RabbitMq.csproj" />
   </ItemGroup>
 
   <ItemGroup>
