--- a/CatalogService/CatalogService/CatalogService.csproj
+++ b/CatalogService/CatalogService/CatalogService.csproj
@@ -31,6 +31,7 @@
     <ProjectReference Include="..\CatalogService.Configuration\CatalogService.Configuration.csproj" />
     <ProjectReference Include="..\CatalogService.DAL\CatalogService.DAL.csproj" />
     <ProjectReference Include="..\CatalogService.Domain\CatalogService.Domain.csproj" />
+    <ProjectReference Include="..\CatalogService.Infrastructure\CatalogService.Infrastructure.csproj" />
     <ProjectReference Include="..\CatalogService.RabbitMq\CatalogService.RabbitMq.csproj" />
   </ItemGroup>
 
