--- a/CatalogService/CatalogService/appsettings.json
+++ b/CatalogService/CatalogService/appsettings.json
@@ -8,7 +8,8 @@
   "RabbitMq": {
     "HostName": "localhost",
     "Persistence": true,
-    "RoutingKey": "ItemUpdateQueue"
+    "RoutingKey": "ItemUpdateQueue",
+    "Entitlement": true
   },
   "AllowedHosts": "*"
 }
