--- a/CatalogService/CatalogService.API/CatalogService.API.csproj
+++ b/CatalogService/CatalogService.API/CatalogService.API.csproj
@@ -9,6 +9,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.4" />
+		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.35.0" />
 	</ItemGroup>
 
 	<ItemGroup>
