--- a/MentoringApiGateway/MentoringApiGateway/MentoringApiGateway.csproj
+++ b/MentoringApiGateway/MentoringApiGateway/MentoringApiGateway.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
     <PackageReference Include="MMLib.SwaggerForOcelot" Version="8.2.0" />
     <PackageReference Include="Ocelot" Version="23.3.3" />
     <PackageReference Include="Ocelot.Cache.CacheManager" Version="23.3.3" />
