--- a/CatalogService/CatalogService/appsettings.json
+++ b/CatalogService/CatalogService/appsettings.json
@@ -11,5 +11,8 @@
     "RoutingKey": "ItemUpdateQueue",
     "Entitlement": false
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=d515da8d-d2d7-4146-b2e0-b8c1a7df30df;IngestionEndpoint=https://polandcentral-0.in.applicationinsights.azure.com/;LiveEndpoint=https://polandcentral.livediagnostics.monitor.azure.com/;ApplicationId=29e9b3d9-4c6b-45e3-901b-f66e8b6cd0e3"
+  }
 }
