--- a/MentoringApiGateway/MentoringApiGateway/appsettings.json
+++ b/MentoringApiGateway/MentoringApiGateway/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=140a52b7-938a-4eed-a2f1-c7b5ba9cc7a3;IngestionEndpoint=https://polandcentral-0.in.applicationinsights.azure.com/;LiveEndpoint=https://polandcentral.livediagnostics.monitor.azure.com/;ApplicationId=c7e44795-72a2-4131-9786-f42fdbe61307"
+  }
 }
