--- a/Task/CartingService/appsettings.json
+++ b/Task/CartingService/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=36fb326e-9544-4757-be9d-9fc39983735e;IngestionEndpoint=https://polandcentral-0.in.applicationinsights.azure.com/;LiveEndpoint=https://polandcentral.livediagnostics.monitor.azure.com/;ApplicationId=62338dff-8b7b-4b7a-8241-f1e383b6ab2f"
+  }
 }
