--- a/Task/CartingService/CatingService.csproj
+++ b/Task/CartingService/CatingService.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -6,11 +6,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
 	  <GenerateDocumentationFile>true</GenerateDocumentationFile>
+	  <ApplicationInsightsResourceId>/subscriptions/2a7984f8-9b12-4d2d-95b2-50ecac731dba/resourceGroups/DotNetAdvanced/providers/microsoft.insights/components/CatingService</ApplicationInsightsResourceId>
+	  <UserSecretsId>23f87c97-12d0-4d9e-be38-66a69fefa162</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
     <PackageReference Include="LiteDB" Version="5.0.19" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
